az-aks/k8s-yml-templates/core/ingress/PRD-B/defectdojo-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: defectdojo
  namespace: devops-addons
  annotations:
    kubernetes.io/ingress.class: nginx   
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
    nginx.org/client-max-body-size: "600m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
    tls:
      - hosts:
        - az-defectdojo-prdb.cloudkube.xyz
        secretName: ingress-secret-tls 
    rules:
    - host: az-defectdojo-prdb.cloudkube.xyz
      http:
        paths:
        - backend:
            serviceName: defectdojo-django
            servicePort: 80
---
